--- a/pages/index.css
+++ b/pages/index.css
@@ -5,8 +5,6 @@
 /*page*/
 @import url('../blocks/root/root.css');
 
-/*container*/
-@import url('../blocks/container/container.css');
 
 /*header*/
 @import url('../blocks/header/header.css');
@@ -43,6 +41,7 @@
 @import url('../blocks/place/__image/place__image.css');
 @import url('../blocks/place/__paragraph/place__paragraph.css');
 @import url('../blocks/place/__title/place__title.css');
+@import url('../blocks/paragraphs/paragraphs.css');
 
 /*website*/
 @import url('../blocks/website/website.css');
@@ -66,10 +65,10 @@
 @import url('../blocks/footer/__links/footer__links.css');
 
 
-/* я так и не понял как решить overflow в гридах блоке places и footer
+/* я так и не понял как решить overflow в гридах блоке places и footer*/
 * {
   outline: 1px solid red;
-}*/
+}
 
 
 html {
