--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -1,11 +1,7 @@
 .cover__text {
-  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   color: #fff;
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
 }
