--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,6 @@
 .cover__title {
-  margin: 0 auto;
+  z-index: 9999;
+  margin: 0;
   padding: 0;
 
   font-family: Inter;
@@ -13,13 +14,11 @@
   .cover__title {
     font-size: 32px;
     min-width: 250px;
-    line-height: 35px;
   }
 }
 
 @media screen and (min-width: 767px) {
   .cover__title {
-    line-height: 1.06;
     font-size: 72px;
     max-width: 560px;
   }
