--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,4 +1,5 @@
 .root {
+  max-width: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
