--- a/pages/index.css
+++ b/pages/index.css
@@ -52,8 +52,8 @@
 @import url('../blocks/cover/cover.css');
 @import url('../blocks/cover/__title/cover__title.css');
 @import url('../blocks/cover/__subtitle/cover__subtitle.css');
-@import url('../blocks/cover/__background/cover__background.css');
 @import url('../blocks/cover/__text/cover__text.css');
+@import url('../blocks/cover/__link/cover__link.css');
 
 /*link-hover*/
 @import url('../blocks/link-hover/link-hover.css');
@@ -65,16 +65,16 @@
 @import url('../blocks/footer/__links/footer__links.css');
 
 
-/* я так и не понял как решить overflow в гридах блоке places и footer*/
+/*
 * {
   outline: 1px solid red;
 }
+*/
 
 
 html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-
 }
 
 *,
