--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,4 +1,5 @@
 .cover__subtitle {
+  color: #fff;
   z-index: 9999;
   margin: 0;
   padding: 0;
@@ -8,7 +9,6 @@
   font-family: inherit;
   font-style: normal;
   font-weight: normal;
-  font-size: calc(14px + (18 - 14) * (100vw - 320px) / (1280 - 320));
 
   text-align: center;
   margin-top: 32px;
