--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -1,7 +1,7 @@
 .cover__text {
   display: flex;
-  flex-direction: column;
   align-items: center;
-
-  color: #fff;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
 }
