--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,12 +1,13 @@
 .cover__title {
+  color: #fff;
   z-index: 9999;
   margin: 0;
   padding: 0;
 
-  font-family: Inter;
+  font-family: inherit;
   font-style: normal;
   font-weight: 900;
-
+  position: relative;
   text-align: center;
 }
 
@@ -14,6 +15,7 @@
   .cover__title {
     font-size: 32px;
     min-width: 250px;
+    line-height: 1.09;
   }
 }
 
@@ -21,5 +23,6 @@
   .cover__title {
     font-size: 72px;
     max-width: 560px;
+    line-height: 1.06;
   }
 }
