--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,7 +2,7 @@
     text-decoration: none;
     color: #fff;
 
-    font-family: Inter;
+    font-family: inherit;
     font-style: normal;
     font-weight: normal;
 
@@ -12,11 +12,11 @@
     margin: 0;
 
     font-size: 14px;
-    line-height: calc(14px + (16 - 14) * (100vw - 320px) / (1280 - 320));
+    line-height: 1.14;
   }
 
-  @media screen and (min-width: 767px) {
+  @media screen and (max-width: 767px) {
     .footer__copyright {
-      font-size: 16px;
+      line-height: 1;
     }
   }
