--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -30,17 +30,13 @@
 @media screen and (max-width: 767px) {
   .place__title {
     padding: 0 16px;
+    line-height: 1.1;
   }
 }
 
 @media screen and (min-width: 770px) and (max-width: 1280px) {
   .place__title {
     font-size: 72px;
-  }
-}
-
-@media screen and (min-width: 1000px) {
-  .place__title {
-    max-width: 440px;
+    line-height: 1.06;
   }
 }
