--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,5 +1,9 @@
 .root {
-  max-width: 100%;
+  margin: 0 auto;
+  padding: 0;
+
+  min-width: 320px;
+  max-width: 1280px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
@@ -9,7 +13,4 @@
     Arial,
     Helvetica,
     sans-serif;
-
-  margin: 0;
-  padding: 0;
 }
