--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -10,6 +10,7 @@
   -webkit-box-align: end;
   -ms-flex-align: end;
   align-items: flex-end;
+  margin-bottom: 24px;
 }
 
 @media screen and (max-width: 426px) {
