--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -11,15 +11,16 @@
   text-align: center;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 767px) {
   .lead__subtitle {
     font-size: 16px;
     margin-top: 16px;
     line-height: 1.25;
+    max-width: 288px;
   }
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .lead__subtitle {
     margin-top: 32px;
     line-height: 1.2;
