--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,14 +10,15 @@
   text-align: center;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 767px) {
   .lead__title {
     font-size: 40px;
     line-height: 1.1;
+    max-width: 288px;
   }
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .lead__title {
     font-size: 96px;
     line-height: 1.04;
