--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,8 +1,9 @@
 .cover__subtitle {
   color: #fff;
   z-index: 9999;
-  margin: 0;
-  padding: 0;
+  position: relative;
+
+  margin: 0 auto;
 
   max-width: 360px;
 
