--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,14 @@
 .cover {
   position: relative;
-
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 
   background-image: url('../../images/cover-trains.jpg');
   background-size: cover;
@@ -9,6 +17,7 @@
 
   max-height: 100%;
   margin: 0;
+
 }
 
 .cover::before {
