--- a/pages/index.css
+++ b/pages/index.css
@@ -54,8 +54,6 @@
 @import url('../blocks/cover/__subtitle/cover__subtitle.css');
 @import url('../blocks/cover/__link/cover__link.css');
 
-/*link*/
-@import url('../blocks/link/link.css');
 
 /*link-hover*/
 @import url('../blocks/link-hover/link-hover.css');
@@ -65,9 +63,9 @@
 @import url('../blocks/footer/__copyright/footer__copyright.css');
 @import url('../blocks/footer/__link/footer__link.css');
 @import url('../blocks/footer/__links/footer__links.css');
+@import url('../blocks/footer/__li/footer__li.css');
 
 /*
 * {
   outline: 1px solid red;
-}
-*/
+}*/
