--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,3 +1,78 @@
 .cover__link {
   text-decoration: none;
+
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+
+  background-image: url('../../../images/cover-trains.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.cover__link::before {
+  content: "";
+  display: block;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2A2C2F;
+  opacity: .3;
+
+  -webkit-transition: opacity .3s linear;
+  transition: opacity .3s linear;
+}
+
+.cover__link:hover::before {
+  opacity: .8;
+  cursor: pointer;
+}
+
+/*(max-width: 425px) ||
+(min-width: 426px) and (max-width: 768px) ||
+(min-width: 769px) and (max-width: 1023px) ||
+(min-width: 1024px) and (max-width: 1280px) ||
+(min-width: 1280px) ||*/
+
+@media screen and (max-width: 767px) {
+  .cover__link {
+    margin: 65px 0;
+    min-height: 200px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .cover__link {
+    margin: 90px 0;
+    min-height: 480px;
+  }
+}
+
+@media screen and (min-width: 1023px) {
+  .cover__link {
+    margin: 92px 0;
+    min-height: 640px;
+  }
+}
+
+@media screen and (min-width: 1279px) {
+  .cover__link {
+    min-height: 740px;
+    margin: 92px 48px;
+  }
 }
