--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,14 +1,15 @@
 .cover__title {
   color: #fff;
   z-index: 9999;
-  margin: 0;
+  position: relative;
+
+  margin: 0 auto;
   padding: 0;
 
   font-family: inherit;
   font-style: normal;
   font-weight: 900;
 
-  position: relative;
   text-align: center;
 }
 
