cover margin fix and so

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -16,7 +16,7 @@
 @media screen and (max-width: 426px) {
   .cover__title {
     font-size: 32px;
-    min-width: 250px;
+    max-width: 250px;
     line-height: 1.09;
   }
 }
