--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -13,14 +13,14 @@
   max-width: 100%;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
+@media screen and (max-width: 768px) {
   .intro__text {
-    max-width: 690px;
+    max-width: 720px;
   }
 }
 
-@media screen and (min-width: 1440px) {
-  .into__text {
-    font-size: calc(16px + (20 - 16) * (100vw - 1280px) / (1920 - 1280));
+@media screen and (min-width: 1024px) {
+  .intro__text {
+    max-width: 690px;
   }
 }
