--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,6 @@
 .intro {
-  margin-top: calc(64px + (92 - 64) * (100vw - 320px) / (1280 - 320));
   max-width: 100%;
+  margin-top: 64px;
 }
 
 @media screen and (max-width: 767px) {
@@ -15,7 +15,13 @@
   }
 }
 
-@media screen and (min-width: 767px) and (max-width: 1280px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .intro {
+    margin-top: 88px;
+  }
+}
+
+@media screen and (min-width: 769px) {
   .intro {
     margin-top: 92px;
   }
