--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -25,6 +25,12 @@
   }
 }
 
+@media screen and (max-width: 767px) {
+  .photo-grid {
+    margin: 64px 0;
+  }
+}
+
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .photo-grid {
     margin: 88px 0;
