--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -11,6 +11,7 @@
   -ms-flex-item-align: end;
   align-self: end;
   font-size: 72px;
+  max-width: 460px;
 }
 
 @media screen and (max-width: 426px) {
